--- a/questions/templates/questions/practice_question_set.html
+++ b/questions/templates/questions/practice_question_set.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-4xl font-bold text-center text-gray-900 mb-12">{{ question_set.name }}</h1>
+        <p class="text-center text-gray-600 mb-8">题单创建者：{{ question_set.creator }}</p>
         <div id="questions" class="space-y-8">
             {% for question in questions %}
                 <div class="question bg-white shadow-lg rounded-lg p-6" id="question-{{ question.id }}">
@@ -50,10 +51,16 @@
     <div id="error-reason-dialog" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
         <div class="bg-white rounded-lg p-6 w-1/3">
             <h2 class="text-xl font-semibold text-gray-800 mb-4">记录错误原因</h2>
-            <textarea id="error-reason" class="form-textarea mt-1 block w-full border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="可选"></textarea>
+            <textarea id="error-reason"
+                      class="form-textarea mt-1 block w-full border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500"
+                      placeholder="可选"></textarea>
             <div class="flex justify-end mt-4">
-                <button onclick="closeErrorReasonDialog()" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded mr-2">取消</button>
-                <button onclick="submitErrorReason()" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">提交</button>
+                <button onclick="closeErrorReasonDialog()"
+                        class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded mr-2">取消
+                </button>
+                <button onclick="submitErrorReason()"
+                        class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">提交
+                </button>
             </div>
         </div>
     </div>
@@ -117,27 +124,27 @@
                     wrong_answer_reason: wrongAnswerReason
                 })
             })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    console.log(`问题 ${questionId} 的答案记录为：${isCorrect ? '正确' : '错误'}`);
-                    // 显示反馈信息
-                    const feedbackElement = document.getElementById('feedback-' + questionId);
-                    feedbackElement.classList.remove('hidden');
-                    setTimeout(() => {
-                        feedbackElement.classList.add('hidden');
-                    }, 2000);
-                } else {
-                    throw new Error(data.message);
-                }
-            })
-            .catch(error => {
-                console.error('错误:', error);
-                // 出错时重新启用按钮，以便用户可以再次尝试
-                if (correctBtn) correctBtn.disabled = false;
-                if (incorrectBtn) incorrectBtn.disabled = false;
-                alert('记录答案失败，请重试。');
-            });
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        console.log(`问题 ${questionId} 的答案记录为：${isCorrect ? '正确' : '错误'}`);
+                        // 显示反馈信息
+                        const feedbackElement = document.getElementById('feedback-' + questionId);
+                        feedbackElement.classList.remove('hidden');
+                        setTimeout(() => {
+                            feedbackElement.classList.add('hidden');
+                        }, 2000);
+                    } else {
+                        throw new Error(data.message);
+                    }
+                })
+                .catch(error => {
+                    console.error('错误:', error);
+                    // 出错时重新启用按钮，以便用户可以再次尝试
+                    if (correctBtn) correctBtn.disabled = false;
+                    if (incorrectBtn) incorrectBtn.disabled = false;
+                    alert('记录答案失败，请重试。');
+                });
         }
     </script>
 {% endblock %}
