--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -67,3 +67,7 @@
   </div>
 </div>
 {% endblock %}
+
+{% block extra_scripts %}
+<script src="{% static 'js/user_profile.js' %}"></script>
+{% endblock %}
