--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "basehome.html" %}
-
+{% block title %}共享练习平台{% endblock %}
 {% block content %}
 <div class="max-w-4xl mx-auto mt-10">
     <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">欢迎来到学习平台</h1>
