--- a/groups/templates/groups/management_group.html
+++ b/groups/templates/groups/management_group.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-semibold text-gray-700 mb-4">热门组</h2>
+            <h2 class="text-2xl font-semibold text-gray-700 mb-4">活跃小组</h2>
             <div class="bg-white shadow-md rounded-lg p-6">
                 {% if popular_groups %}
                     <ul>
