--- a/questions/templates/questions/detail_question.html
+++ b/questions/templates/questions/detail_question.html
@@ -34,11 +34,11 @@
 
         <div class="mt-10 bg-white shadow-md rounded-lg p-6">
             <h2 class="text-2xl font-semibold text-gray-700 mb-4">评论区</h2>
-            <form method="post" class="mb-4 w-full">
+            <form method="POST" action="{% url 'question_detail' question.id %}" class="mb-4 w-full">
                 {% csrf_token %}
                 <div class="mb-4">
                     <label for="id_comment" class="block text-gray-700 text-sm font-bold mb-2">评论</label>
-                    <textarea id="id_comment" name="comment"
+                    <textarea id="id_comment" name="text"
                               class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-32"
                               rows="10" placeholder="支持Markdown渲染"></textarea>
                 </div>
