--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -1,6 +1,7 @@
 {% extends 'basehome.html' %}
 {% load widget_tweaks %}
 {% load static %}
+{% block title %}个人信息{% endblock %}
 
 {% block content %}
 <div class="bg-white shadow overflow-hidden sm:rounded-lg">
