--- a/templates/basehome.html
+++ b/templates/basehome.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}默认标题{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="{% static 'css/tailwind.css' %}" rel="stylesheet">
     <script src="{% static 'js/user_profile.js' %}"></script>
     <link rel="icon" href="{% static 'ico.png' %}" type="image/x-icon">
