style:修改前端样式

--- a/groups/templates/groups/management_group.html
+++ b/groups/templates/groups/management_group.html
@@ -87,7 +87,7 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p>暂无热门组。</p>
+                    <p>暂无活跃小组。</p>
                 {% endif %}
             </div>
         </div>
